feat: model json 직렬화 작업중

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   graphql: ^5.1.1
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^4.1.0
+  build_runner: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
